# skh_ai_agent

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_agent_api.py  test_db.py
agents/: test_agent.py
app/: main.py
db/: database.py
docs/: enterprise-deliverable.md
tools/: test_tools.py
