[project]
name = "sk-hynix-ai-agent"
version = "0.1.0"
description = "SK Hynix AI Agent for Test Operation Efficiency"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.30.6",
    "langchain==1.3.7",
    "langgraph==1.2.4",
    "langchain-openai==1.3.0",
    "psycopg2-binary==2.9.9",
    "pydantic==2.9.2",
    "python-dotenv==1.0.1",
    "httpx==0.27.0",
    "sqlalchemy==2.0.36",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "pytest",
]

[dependency-groups]
dev = [
    "black",
    "ruff",
    "pytest",
]